--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/register": "^7.10.4",
     "@wdio/cli": "^6.1.25",
+    "allure-commandline": "^2.13.0",
     "chai": "^4.2.0",
     "webdriverio": "^6.1.25"
   },
